# dimensional-vectors

./: AD.hs  Apply.hs  Fad.hs  ForwardAD.hs  ForwardAD.lhs  ForwardADTest.hs  ForwardADTest.lhs  G19.hs  GM.hs  KalmanExample.hs  KalmanExample.lhs  ListKind.hs  Matrix.hs  Matrix.lhs  MyHList.hs  MyHList.lhs  Nats.hs  Orthogonals.lhs  PosVel.lhs  PosVelTest.hs  PosVelTest.lhs  README  VApply.hs  VTuple.hs  Vector.hs  Vector.lhs  VectorAD.hs  VectorADTest.hs  dimensional-vectors.cabal
Numeric/Units/Dimensional/: LinearAlgebra.hs
Numeric/Units/Dimensional/LinearAlgebra/: HListExtras.hs  Matrix.hs  Matrix.lhs  Operators.hs  Vector.hs  Vector.lhs
tests/: Playground.hs
