Name:                dimensional-vectors
Version:             0.1
License:             BSD3
License-File:        LICENSE
Copyright:           Bjorn Buckwalter 2008-2009
Author:              Bjorn Buckwalter 
Maintainer:          bjorn.buckwalter@gmail.com
Stability:           experimental
Homepage:            http://dimensional.googlecode.com/
Synopsis:            Linear algebra with statically checked physical dimensions.
Description:
    Dimensional-vectors provides basic linear algebra functions for
    vectors and matrices where the elements are physical quantities
    from the Dimensional library. Matrices and vectors can be
    heterogeneous in the physical dimensions of their elements,
    which while mathematically questionable is useful e.g. for
    representing state vectors and covariance matrices. All
    vector/matrix operations are statically guaranteed to be correct
    w.r.t. the vector/matrix dimensions as well as the physical
    dimensions of the elements.
    The internal vector/matrix representation is slow but should
    be readily exchangable for a faster one (e.g. GSLHaskell).
Category:            Math
Build-Type:          Simple
Build-Depends:       base, dimensional, numtype, fad, HList, numeric-quest
Exposed-Modules:     Vector, Matrix, MyHList, ForwardAD, PosVel
Extra-source-files:  README, LICENSE

