Name:                dimensional-vectors
Version:             0.4
License:             BSD3
License-File:        LICENSE
Copyright:           Bjorn Buckwalter 2008-2010
Author:              Bjorn Buckwalter 
Maintainer:          bjorn.buckwalter@gmail.com Stability:           experimental Homepage:            http://dimensional.googlecode.com/
Synopsis:            Linear algebra with statically checked physical dimensions.
Description:
    Dimensional-vectors provides basic linear algebra functions for
    vectors and matrices where the elements are physical quantities
    from the Dimensional library. Matrices and vectors can be
    heterogeneous in the physical dimensions of their elements,
    which while mathematically questionable is useful e.g. for
    representing state vectors and covariance matrices. All
    vector/matrix operations are statically guaranteed to be correct
    w.r.t. the vector/matrix dimensions as well as the physical
    dimensions of the elements.
    The internal vector/matrix representation is slow but should
    be readily exchangable for a faster one (e.g. GSLHaskell).
Category:            Math
Build-Type:          Simple
Build-Depends:       base < 5, 
                     time < 1.3,
                     dimensional < 1.1,
                     numtype < 1.1,
                     HList >= 0.2.1 && < 0.3,
                     numeric-quest < 0.2,
                     ad >= 0.44.4 && < 1.1
Exposed-Modules:     Vector, Matrix, MyHList, AD, VectorAD, PosVel
Extra-source-files:  README, LICENSE

